Do not re-use previously generated thumbnails in case of error

Summary:
If thumbnail generation had failed for a certain image, the thumbnail from the previous successful run would have been mistakenly used.

BUG: 355590

Reviewers: #gwenview, ngraham

Reviewed By: #gwenview, ngraham

Subscribers: ngraham, #gwenview

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D21337